--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "develop": "nodemon . --ignore 'ovoce.json'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
